Add absences and grades

--- a/TODO.txt
+++ b/TODO.txt
@@ -2,3 +2,4 @@ TODO: Refactor the code
 TODO: Implement the api for teachers
 TODO: Better documentation
 TODO: Understand what card.usrType is
+TODO: Convert dicts in classes
